# ai-interview-tutor

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.api  Makefile  README.md  accessibility.py  accessibility_enhancer.py  admin_alerts.py  admin_dashboard.py  ai_coach.py  airline_database.py  airline_questions.py  alembic.ini  analysis.py  analytics.py  analytics_tracker.py  animation_components.py  api_utils.py  api_versioning.py  app.py  auth_system.py  auth_utils.py  auto_recovery.py  backup_system.py  benchmark_service.py  cache_utils.py  clova_raw_response.txt  clova_vs_gpt_result.txt  config.py  constants.py  content_enhancer.py  csrf_protection.py  data_cleanup.py  data_export.py  db_migration.py  debate_enhancer.py  debate_report.py  debate_topics.py  (+114 more)
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci-cd.yml  ci.yml  code-check.yml  codeql.yml  dependency-review.yml  deploy.yml  release.yml
.streamlit/: config.toml  secrets.toml.example
_backup/dead_code/: append_session.py  check_all_pages.py  fix_component.py  fix_mock_interview.py  fix_realtime_feedback.py  fix_webcam_size.py  update_webcam.py
backups/: backup_metadata.json
clova_debug_logs/: clova_20260122_103729.txt  clova_20260122_103955.txt  clova_20260122_104038.txt  clova_20260122_104445.txt  clova_20260122_104606.txt
data/: airline_news.json  company_info.py  essay_prompts.py  fitness_log.json  interview_questions.py  interview_tips.py  job_postings_auto.json  korean_air_questions.py  news_cache.json  question_history.json  score_aggregate.json
data/admin/: audit_log.json  credentials.json  usage_stats.json
data/alerts/: history.json
data/analytics/: realtime.json  sessions.json
data/errors/: error_log.json  error_stats.json
data/mentors/: mentors.json
data/recommendations/: learning_content.json
docs/: REFACTORING_PLAN.md
migrations/: env.py
monitoring/: prometheus.yml
monitoring/grafana/provisioning/datasources/: datasources.yml
new_features/: 1_압박면접모드.py  2_타임어택모드.py  3_면접관성격선택.py  4_경쟁랭킹시스템.py  5_면접전체크리스트.py  6_발음교정.py  7_AR복장체크.py  8_긴장관리모드.py
nginx/: nginx.conf
nginx/conf.d/: default.conf
nginx/ssl/: .gitkeep
pages/: 0_시작하기.py  10_채용알림.py  11_항공사가이드.py  12_표정연습.py  13_실전연습.py  14_항공사퀴즈.py  15_국민체력.py  16_기업분석.py  17_자소서기반질문.py  19_자소서작성.py  1_✍️_초안생성기.py  1_롤플레잉.py  20_자소서첨삭.py  21_이미지메이킹.py  21_자소서템플릿.py  22_체력준비.py  23_D-Day캘린더.py  24_QnA게시판.py  24_에어로케이.py  25_항공상식퀴즈.py  26_기내방송연습.py  2_영어면접.py  2_📝_자소서첨삭.py  30_로그인.py  31_구독.py  32_멘토찾기.py  33_채용정보.py  34_스킬분석.py  35_요금제.py  36_AI코칭.py  37_그룹면접.py  3_진도관리.py  3_📰_기업분석_뉴스.py  4_모의면접.py  5_토론면접.py  6_성장그래프.py  6_💬_AI챗봇.py  7_합격자DB.py  8_면접꿀팁.py  90_시스템관리.py  (+2 more)
pdf_files/: metadata.json
prompts/: perfect_interviewer_prompt.md
scripts/: docker-entrypoint.sh  healthcheck.sh  init-db.sql
src/: __init__.py
src/ai/: __init__.py  feedback_analyzer.py  interview_engine.py  prompts.py  speech_analyzer.py
src/ai/advanced/: __init__.py  emotion_detector.py  realtime_feedback.py  video_analyzer.py  voice_analyzer.py
src/analytics/: __init__.py  dashboard.py  metrics.py  progress.py  reports.py  tracker.py
src/api/v1/: deps.py  router.py
src/api/v1/endpoints/: __init__.py  auth.py  jobs.py  mentors.py  payments.py  recommendations.py  users.py  websocket.py
src/api/v1/middleware/: __init__.py  cors.py  error_handler.py  logging.py
src/cache/: __init__.py  cache_keys.py  decorators.py  redis_cache.py
src/config/: __init__.py  settings.py
src/core/exceptions/: __init__.py
src/core/models/: __init__.py  base.py  job.py  mentor.py  payment.py  recommendation.py  user.py
src/database/: __init__.py  models.py  query_optimizer.py  repositories.py  session.py
src/infrastructure/: container.py
src/realtime/: __init__.py  events.py  notifications.py  websocket.py
src/repositories/: __init__.py  base.py  job_repository.py  mentor_repository.py  payment_repository.py  user_repository.py
src/security/: __init__.py  authentication.py  encryption.py  middleware.py  validators.py
src/services/: __init__.py  auth_service.py  job_service.py  mentor_service.py  payment_service.py  recommendation_service.py  user_service.py
src/utils/: __init__.py  logging.py
tests/: __init__.py  ab_testing.py  beta_comprehensive_test.py  beta_test_results.json  comprehensive_test.py  conftest.py  phase_complete_test.py  phase_test.py  quick_test.py  test_all_apis.py  test_core.py  test_csrf_protection.py  test_deep_questions.py  test_import.py  test_improvements.py  test_integration.py  test_jasoseo_question.py  test_jasoseo_simple.py  test_new_q2_logic.py  test_phase_a_to_d_complete.py  test_premium_analysis.py  test_rate_limiter.py  test_response_cache.py  test_roleplay.py  test_runtime_errors.py  test_safe_api.py  test_user_analytics.py  test_webcam_realtime.py  user_experience_test.py
tests/integration/: __init__.py  test_api.py  test_system_integration.py
tests/load/: README.md  locustfile.py
tests/unit/: __init__.py  test_analytics.py  test_constants.py  test_error_handler.py  test_feedback_ux.py  test_health_check.py  test_models.py  test_monitoring.py  test_performance_utils.py  test_security_utils.py  test_services.py  test_shared_utils.py  test_stage5.py
tools/: debug_analysis.py  diagnose_webcam.py
utils/: draft_generator.py  draft_prompts.py  env_config.py  face_analysis.py  llm_client.py  naver_news.py  news_crawler.py  news_summarizer.py  prompt_templates.py
